Revision history for {{$dist->name}}

{{$NEXT}}
          plugins can now provide a MANIFEST.SKIP that can be processed by
          ManifestSkip. Previously generated content was just ignored.
          (thanks, Olivier Mengué!)

4.300020  2012-06-21 11:17:40 America/New_York
          properly set the working directory when testing (thanks, Jesse
          Luehrs!)

4.300019  2012-06-20 15:36:01 America/New_York
          avoid looking outside the dist during testing (thanks, Jesse Luehrs!)

4.300018  2012-06-07 22:25:03 America/New_York
          format codes %E, %T, %U, & %V added to NextRelease (thanks,
          Karen Etheridge & Christopher J. Madsen!)

4.300017  2012-05-31 12:17:45 America/New_York
          also check plugin version requirements in dzil authordeps --missing
          (Karen Etheridge)

          add 'dzil add' to add new modules to an existing dist (thanks, David
          Golden!)

          misc. bugfixes (thanks, Karen Etheridge and Olivier Mengué!)

4.300016  2012-05-04 22:09:10 America/New_York
          make AutoPrereqs treat .psgi files as scannable (thanks, Jakob Voss!)

          add yet more links in plugins documentation to help discoverability
          of other plugins.  (thanks, Olivier Mengué!)

          AutoPrereqs: skip author and release tests when scanning (RT#76305).
          (thanks, Olivier Mengué!)

4.300015  2012-04-23 21:38:21 America/New_York
          require a CPAN::Meta::Requirements 2.121 to get the
          requirements_for_module (thanks, Olivier Mengué!)

          'dzil run' with no arguments will now invoke a new shell.  (thanks,
          Karen Etheridge!)

          dzil clean now has has a "dry run" option.  (thanks, Karen
          Etheridge!)

          add more links in plugins documentation to help discoverability
          of other plugins.  (thanks, Olivier Mengué!)

          support :version requirement for bundles (thanks, Randy Stauner!)

4.300014  2012-04-05 12:46:33 America/New_York